<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.recipe.bottomSheet.RecipesBottomSheet"
    android:background="@color/card_background_color">


    <TextView
        android:id="@+id/meal_type_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textColor="@color/title_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/meal_type_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_type_textView"> <!-- This make scroll bars invisible -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/meal_type_chip_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@id/main_course"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/main_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course" />

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/side_dish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish" />


                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/dessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert" />


                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/appetizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer" />


                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/salad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad" />


                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/bread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bread" />

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/break_fast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/soup"
                    style="@style/customChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soup" />

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/beverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverage" />

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/sauce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sauce" />

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/marinade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marinade" />

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/finger_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finger_food" />

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/snack_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack_chip" />

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/drink_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drink_chip" />


            </com.google.android.material.chip.ChipGroup>


        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/diet_type_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/diet_type"
        android:textColor="@color/title_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_type_scroll_view" />

    <HorizontalScrollView
        android:id="@+id/diet_type_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diet_type_textView"> <!-- This make scroll bars invisible -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/diet_type_chip_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@id/gluten_fre"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/gluten_fre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gluten Free" />

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/ketogenic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ketogenic" />


                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/vegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vegetarian" />


                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan" />


                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/pescetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pescetarian" />


                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/paleo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paleo" />

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/primal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primal" />

                <com.google.android.material.chip.Chip
                    style="@style/customChipStyle"
                    android:id="@+id/whole_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whole_30" />


            </com.google.android.material.chip.ChipGroup>


        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/apply_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diet_type_scroll_view"
        android:textAllCaps="false"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>