<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_overview_scene"
    tools:context=".ui.details.fragments.OverviewFragment">


    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <View
        android:id="@+id/overlay_view"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/main_imageView"
        app:layout_constraintStart_toStartOf="@+id/main_imageView"
        app:layout_constraintTop_toTopOf="@+id/main_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/overlay_view"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/time_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toTopOf="@+id/time_textView"
        app:layout_constraintEnd_toEndOf="@id/time_textView"
        app:layout_constraintStart_toStartOf="@id/time_textView"
        app:tint="@color/white" />


    <TextView
        android:id="@+id/like_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="16dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/overlay_view"
        app:layout_constraintEnd_toStartOf="@id/time_textView" />

    <ImageView
        android:id="@+id/like_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toTopOf="@+id/like_textView"
        app:layout_constraintEnd_toEndOf="@id/like_textView"
        app:layout_constraintStart_toStartOf="@id/like_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:text="Title"
        android:textColor="@color/title_color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_imageView" />

    <ImageView
        android:id="@+id/vegetarian_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@id/title_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_text_view"
        app:tint="@color/item_color" />

    <TextView
        android:id="@+id/vegetarian_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegeteranian"
        android:textColor="@color/item_color"
        app:layout_constraintBottom_toBottomOf="@id/vegetarian_image_view"
        app:layout_constraintStart_toEndOf="@id/vegetarian_image_view"
        app:layout_constraintTop_toTopOf="@id/vegetarian_image_view" />

    <ImageView
        android:id="@+id/vegan_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@id/vegetarian_image_view"
        app:layout_constraintTop_toBottomOf="@id/vegetarian_image_view"
        app:tint="@color/item_color" />

    <TextView
        android:id="@+id/vegan_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Vegan"
        android:textColor="@color/item_color"
        app:layout_constraintBottom_toBottomOf="@id/vegan_image_view"
        app:layout_constraintStart_toEndOf="@id/vegan_image_view"
        app:layout_constraintTop_toTopOf="@id/vegan_image_view" />

    <ImageView
        android:id="@+id/gluten_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toEndOf="@id/vegetarian_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_text_view"
        app:tint="@color/item_color" />

    <TextView
        android:id="@+id/gluten_free_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/item_color"
        app:layout_constraintBottom_toBottomOf="@id/gluten_free"
        app:layout_constraintStart_toEndOf="@id/gluten_free"
        app:layout_constraintTop_toTopOf="@id/gluten_free" />

    <ImageView
        android:id="@+id/dairy_free_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@id/gluten_free"
        app:layout_constraintTop_toBottomOf="@id/gluten_free"
        app:tint="@color/item_color" />

    <TextView
        android:id="@+id/dairy_free_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/item_color"
        app:layout_constraintBottom_toBottomOf="@id/dairy_free_image_view"
        app:layout_constraintStart_toEndOf="@id/dairy_free_image_view"
        app:layout_constraintTop_toTopOf="@id/dairy_free_image_view" />


    <ImageView
        android:id="@+id/healthy_image_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toEndOf="@id/gluten_free_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_text_view"
        app:tint="@color/item_color" />

    <TextView
        android:id="@+id/healthy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/item_color"
        app:layout_constraintBottom_toBottomOf="@id/healthy_image_View"
        app:layout_constraintStart_toEndOf="@id/healthy_image_View"
        app:layout_constraintTop_toTopOf="@id/healthy_image_View" />

    <ImageView
        android:id="@+id/cheap_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check_mark"
        app:layout_constraintStart_toStartOf="@id/healthy_image_View"
        app:layout_constraintTop_toBottomOf="@id/healthy_image_View"
        app:tint="@color/item_color" />

    <TextView
        android:id="@+id/cheap_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/item_color"
        app:layout_constraintBottom_toBottomOf="@id/cheap_image_view"
        app:layout_constraintStart_toEndOf="@id/cheap_image_view"
        app:layout_constraintTop_toTopOf="@id/cheap_image_view" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegan_text_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>